--- a/src/index.html
+++ b/src/index.html
@@ -8,68 +8,97 @@
             margin: 0;
         }
     </style>
+
+    <script type="text/javascript">
+        Duck = function(){
+            this.x = 0;
+            this.y = game.world.randomY;
+            this.minSpeed = -45;
+            this.maxSpeed = 45;
+            this.vx = Math.random()*(this.maxSpeed - this.minSpeed+1)-this.minSpeed;
+            this.vy = Math.random()*(this.maxSpeed - this.minSpeed+1)-this.minSpeed;
+
+            this.duck = game.add.sprite(this.x,this.y,"duck");
+            this.duck.anchor.setTo(0.5, 0.5);
+            this.duck.inputEnabled = true;
+            this.duck.input.enableDrag(false, true);
+            game.physics.enable(this.duck, Phaser.Physics.ARCADE);
+            this.duck.body.collideWorldBounds = true;
+            this.duck.body.bounce.setTo(1, 1);
+            this.duck.body.velocity.x = this.vx;
+            this.duck.body.velocity.y = this.vy;
+            this.duck.body.immovable = true;
+            this.duck.scale.x=0.4;
+            this.duck.scale.y=0.4;
+            var self=this;
+            this.duck.touchDown = function(){
+                quack.play();
+                self.duck.body.velocity.x = 0;
+                self.duck.body.velocity.y = 0;
+            };
+            this.duck.touchUp = function(){
+                self.duck.body.velocity.x = self.vx;
+                self.duck.body.velocity.y = self.vy;
+            };
+            this.duck.events.onInputDown.add(self.duck.touchDown, this);
+            this.duck.events.onInputUp.add(self.duck.touchUp, this);
+
+
+        };
+
+        var w = Math.max(document.documentElement.clientWidth, window.innerWidth || 0);
+        var h = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
+
+        var game = new Phaser.Game(w, h, Phaser.AUTO, '', { preload: preload, create: create, update: update, render: render });
+        var numOfDucks = 100;
+        var pond;
+        var ducks;
+        var quack;
+
+        function preload() {
+            game.load.image('duck', 'img/duck.png');
+            game.load.audio('quack', 'audio/quack.wav');
+        }
+
+        function create() {
+            pond = game.add.graphics(0, 0);
+            game.stage.backgroundColor = "#4C8F00";
+            quack = game.add.audio('quack');
+            pond.lineStyle(0);
+            pond.beginFill(0x8CF2FF, 0.5);
+            pond.drawCircle(470, 200, 100);
+
+            ducks = [];
+            for (var i=0; i<numOfDucks; i++) {
+                ducks.push( new Duck() );
+            }
+        }
+
+        function update() {
+
+        }
+
+        function render(){
+            for(var i=0;i<numOfDucks;i++){
+                var ducky = ducks[i];
+                var x = ducky.duck.position.x;
+                var y = ducky.duck.position.y;
+                var center_x = 470;
+                var center_y = 200;
+                var radius = 120;
+
+                if((x - center_x)*(x - center_x) + (y - center_y) * (y - center_y)  < radius * radius){
+                    ducky.duck.body.velocity.x *= -1;
+                    ducky.duck.body.velocity.y *= -1;
+                } else {
+
+                }
+            }
+        }
+    </script>
 </head>
 <body>
 
-<script type="text/javascript">
-    Duck = function(){
-        this.x = game.world.randomX;
-        this.y = game.world.randomY;
-        this.minSpeed = -25;
-        this.maxSpeed = 25;
-        this.vx = Math.random()*(this.maxSpeed - this.minSpeed+1)-this.minSpeed;
-        this.vy = Math.random()*(this.maxSpeed - this.minSpeed+1)-this.minSpeed;
-
-        this.duck = game.add.sprite(this.x,this.y,"duck");
-        this.duck.anchor.setTo(0.5, 0.5);
-        this.duck.inputEnabled = true;
-        this.duck.input.enableDrag(false, true);
-        game.physics.enable(this.duck, Phaser.Physics.ARCADE);
-        this.duck.body.collideWorldBounds = true;
-        this.duck.body.bounce.setTo(1, 1);
-        this.duck.body.velocity.x = this.vx;
-        this.duck.body.velocity.y = this.vy;
-        this.duck.body.immovable = true;
-        this.duck.events.onInputDown.add(listener, this);
-
-    };
-
-    var game = new Phaser.Game(640, 960, Phaser.AUTO, '', { preload: preload, create: create, update: update });
-    var numOfDucks = 10;
-    var pond;
-    var ducks;
-    var quack;
-
-    function preload() {
-        game.load.image('duck', 'img/duck.png');
-        game.load.audio('quack', 'audio/quack.wav');
-    }
-
-    function create() {
-        var graphics = game.add.graphics(0, 0);
-        game.stage.backgroundColor = "#4C8F00";
-        quack = game.add.audio('quack');
-        // draw a circle
-        graphics.lineStyle(0);
-        graphics.beginFill(0x8CF2FF, 0.5);
-        graphics.drawCircle(470, 200, 100);
-
-        ducks = [];
-        for (var i=0; i<numOfDucks; i++) {
-            ducks.push( new Duck() );
-        }
-    }
-
-    function update() {
-        
-    }
-
-    function listener(){
-        quack.play();
-    }
-
-
-</script>
 
 </body>
 </html>
