--- a/src/index.html
+++ b/src/index.html
@@ -2,51 +2,61 @@
 <head>
     <meta charset="UTF-8" />
     <title>Duck Derby</title>
-    <style type="text/css">
-        body {
-            margin: 0;
-        }
+	 <style type="text/css">
+body {
+    margin: 0;
+}
 
-        .center {
-            text-align: center;
-            vertical-align: middle;
-            margin: auto;
-            background-color: #FACC2E;
-            padding: 10px 20px 10px 20px;
-            border: 1px solid black ;
-            z-index: 11;
+.nextCenter {
+	text-align: center;
+	vertical-align: middle;
+    margin: auto;
+    width: 30%;
+    background-color: #FACC2E;
+    padding: 10px 20px 10px 20px;
+    border: 1px solid black ;
+	z-index: 11;
 
-        }
+}
 
-        .overlay
-        {
-            background-color: rgba(0,0,0,.7);
-            position: fixed; top: 0; left: 0;
-            width: 100%; height: 100%;
-        }
+.overlay
+{
+   background-color: #000;
+   opacity: .7;
+   filter: alpha(opacity=70);
+   position: fixed; top: 0; left: 0;
+   width: 100%; height: 100%;
+   z-index: 10;
+} 
 
+.h1 {
+    z-index: 11;
+}
 
-        .btn {
-            display:block;
-            border : none;
-            font-family: Arial;
-            color: #000000;
-            font-size: 23px;
-            background: #D7DF01;
-            padding: 10px 20px 10px 20px;
-            text-decoration: none;
-        }
+.btn {
+    position : absolute;
+    z-index: 11;
+    left: 200px;
+    right: 200px;
+    border : none;
+    font-family: Arial;
+    color: #000000;
+    font-size: 23px;
+    background: #D7DF01;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
 
-        .btn:hover {
-            background: #dffc3c;
-            text-decoration: none;
-        }
+.btn:hover {
+    background: #dffc3c;
+    text-decoration: none;
+}
 
     </style>
 
     <script type="text/javascript" src="js/phaser.js"></script>
     <script type="text/javascript" src="js/duck_derby.js"></script>
-</head>
+   </head>
 <body>
 </body>
 </html>
