--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 
 
         .btn {
+            margin: 0 auto;
             display:block;
             border : none;
             font-family: Arial;
