sound again adjusting high score on score div to be total score

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
     <div id="score"></div>
     <div id="timer"></div>
 </footer>
-<script type="text/javascript" src="js/fastClick.js"></script>
+<script type="text/javascript" src="js/fastclick.js"></script>
 <script type="text/javascript" src="js/phaser.js"></script>
 <script type="text/javascript" src="js/duck_derby.js"></script>
 </body>
