added a play button to the high_score page

--- a/src/high_score.html
+++ b/src/high_score.html
@@ -63,6 +63,7 @@
 </div>
 <div align="center">
 <button class="btn" onclick='onReset()'>Reset High Score</button>
+<button class="btn" onclick="location.href='index.html';">Play</button>
 </div>
 </body>
 </html>
