--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
         #but{
             margin-top:100px;
         }
-        #menu-button{margin-top:10px;}
+        #menu-button{margin-top:10px;display:none;}
 
         footer{position:absolute;bottom:0;}
         footer div{display:inline-block;}
