--- a/src/index.html
+++ b/src/index.html
@@ -61,11 +61,11 @@
 <body>
 <div id="fb-root"></div>
 <footer>
-    <div id="level">Level:1</div>
-    <div id="score">Score:0</div>
-    <div id="timer">Time:20</div>
+    <div id="level"></div>
+    <div id="score"></div>
+    <div id="timer"></div>
 </footer>
-<script type="text/javascript" src="js/fastClick.js"></script>
+<script type="text/javascript" src="js/fastclick.js"></script>
 <script type="text/javascript" src="js/phaser.js"></script>
 <script type="text/javascript" src="js/duck_derby.js"></script>
 <script type="text/javascript">
