--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,14 @@
         }
         #menu-button{margin-top:10px;display:none;}
 
-        footer{position:absolute;bottom:0;}
+        footer{
+            position:absolute;
+            bottom:0;
+            color:yellow;
+            font-size:24px;
+            background-color: #19C5FF;
+            width: 100%;
+        }
         footer div{display:inline-block;}
 
     </style>
